--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
+  <title>Minimalistic portfolio</title>
 
   <!-- STYLESHEETS -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+  <header class="site-header">
+    <div class="site-header__container container">
+      <a class="site-header__logo logo" href="#">
+        <img class="logo__img" src="img/site-logo.svg" alt="Minimalistic portfolio logo" width="60" height="32">
+      </a>
+
+      <nav class="sitenav">
+        <ul class="sitenav__list">
+          <li class="sitenav__item"><a class="sitenav__link" href="#">Home</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="#">Portfolio</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="#">Contact me</a></li>
+        </ul>
+      </nav>
+
+    </div>
+  </header>
+
+
 <script src="js/main.js"></script>
 </body>
 </html>
