--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
         <img class="logo__img" src="img/site-logo.svg" alt="Minimalistic portfolio logo" width="60" height="32">
       </a>
 
-      <nav class="sitenav">
-        <ul class="sitenav__list">
-          <li class="sitenav__item"><a class="sitenav__link" href="#">Home</a></li>
-          <li class="sitenav__item"><a class="sitenav__link" href="#">Portfolio</a></li>
-          <li class="sitenav__item"><a class="sitenav__link" href="#">Contact me</a></li>
-        </ul>
-      </nav>
+      <button class="site-header__sitenav-toggler" type="button">
+        <img class="sitenav-toggler__img" src="img/burger-icon.png" alt="burger icon" width="24" height="13">
+      </button>
+
+      <div class="site-header__sitenav">
+        <nav class="sitenav">
+          <ul class="sitenav__list">
+            <li class="sitenav__item"><a class="sitenav__link" href="#">Home</a></li>
+            <li class="sitenav__item"><a class="sitenav__link" href="#">Portfolio</a></li>
+            <li class="sitenav__item"><a class="sitenav__link" href="#">Contact me</a></li>
+          </ul>
+        </nav>
+      </div>
 
     </div>
   </header>
